--- a/dischi-ajax/index.html
+++ b/dischi-ajax/index.html
@@ -5,6 +5,7 @@
         <title></title>
         <link rel="stylesheet" href="../dist/app.css">
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+        <script src="https://cdn.jsdelivr.net/npm/handlebars@latest/dist/handlebars.js"></script>
     </head>
     <body>
         <div id="wrapper">
@@ -18,6 +19,17 @@
                 </div>
             </main>
         </div>
+        <script id="card-template" type="text/x-handlebars-template">
+            <div class="card">
+                <div class="img">
+                    <img src="{{ poster }}" alt="{{ title }}">
+                </div>
+
+                <p>{{ title }}</p>
+                <p>{{ author }}</p>
+                <p>{{ year }}<p>
+            </div>
+        </script>
         <script src="../dist/app.js" charset="utf-8"></script>
     </body>
 </html>
